<resources>
    <string name="app_name">project</string>
    <string name="enter_item">Add Book</string>
    <string name="hint_item">Enter Book Name</string>
    <string name="save_button">ADD</string>
    <string name="hint_price">Enter price</string>
    <string name="hint_author">Enter Author</string>
    <string name="book_name">Book Name</string>
    <string name="book_price">Price</string>
    <string name="book_Author">Book Author</string>
    <string name="book_date">Date</string>
    <string name="sure_text">Are you sure?</string>
    <string name="no_text">no</string>
    <string name="yes_text">yes</string>
    <string name="edit_item">Edit Book</string>
    <string name="update_text">Update</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="Title"> Title</string>
    <string name="Description">Description</string>
    <string name="mainText">You have x notes</string>
    <string name="add">Add</string>
    <string name="addTitle">Enter Title</string>
    <string name="addDescription">Enter Description</string>
    <string name="buttonAdd">Add Notes</string>
    <string name="editNotes">Edit Your Notes</string>

    <string name="add_sup">Add</string>
    <string name="add_text">Enter</string>
    <string name="add_supplier">Add Supplier</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_description">Supplier Description</string>
    <string name="insert_sup">Insert Supplier</string>
    <string name="edit_sup">Edit Supplier Detail</string>
    <string name="edit_btn">Edit Supplier</string>

</resources>