<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <TextView
                android:id="@+id/title"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_item"/>

            <EditText
                android:id="@+id/Book_name"
                android:hint="@string/hint_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"/>

            <EditText
                android:id="@+id/Book_price"
                android:hint="@string/hint_price"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Book_name"/>
            <EditText
                android:id="@+id/Book_author"
                android:hint="@string/hint_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Book_price"/>
            <Button
                android:id="@+id/saveButton"
                android:layout_below="@id/Book_author"
                android:layout_margin="5dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/save_button"
                android:layout_width="match_parent"
                android:textColor="@android:color/white"
                android:background="@color/colorAccent"
                android:layout_height="wrap_content" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>