<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <TextView
                android:id="@+id/book_item_name"
                android:text="@string/book_name"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/book_item_price"
                android:text="@string/book_price"
                android:layout_below="@+id/book_item_name"
                android:textSize="18dp"
                android:paddingTop="4dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>



            <TextView
                android:id="@+id/book_item_Author"
                android:text="@string/book_Author"
                android:layout_below="@+id/book_item_price"
                android:textSize="18dp"
                android:paddingTop="4dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/book_item_date"
                android:text="@string/book_date"
                android:layout_below="@+id/book_item_Author"
                android:textSize="18dp"
                android:paddingTop="4dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/book_item_name"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:layout_alignParentRight="true"/>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/book_item_date"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:layout_alignParentRight="true">

                <Button
                    android:id="@+id/editButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="15dp"
                    android:onClick="onUpdate"
                    android:background="@android:drawable/ic_menu_edit"
                    android:layout_marginRight="15dp" />

                <Button
                    android:id="@+id/deleteButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:onClick="onDelete"
                    android:layout_marginEnd="15dp"
                    android:background="@android:drawable/ic_delete"
                    android:layout_marginRight="15dp" />

            </TableRow>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/book_item_Author"
                android:layout_below="@+id/book_item_name"
                android:layout_marginStart="-1dp"
                android:layout_marginLeft="-1dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="-4dp"
                android:layout_toEndOf="@+id/book_item_price"
                android:layout_toRightOf="@+id/book_item_price"
                android:text=".00"
                android:textSize="18dp"
                android:textStyle="bold" />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>